--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "vue": "^1.0.21",
+    "vue-router": "^0.7.13",
+    "vue-resource": "^1.0.1",
     "babel-runtime": "^6.0.0",
     "iview": "^1.0.0",
     "font-awesome": "^4.7.0"
