--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^1.0.21",
     "vue-router": "^0.7.13",
     "vue-resource": "^1.0.1",
+    "vuex": "^0.6.2",
     "babel-runtime": "^6.0.0",
     "iview": "^1.0.0",
     "font-awesome": "^4.7.0"
